[gd_scene load_steps=13 format=3 uid="uid://dc8wfy21y161b"]

[ext_resource type="PackedScene" uid="uid://bu4r0rl5ihcs" path="res://models/props/Spotlight.fbx" id="1_qvrmg"]
[ext_resource type="Texture2D" uid="uid://dhy1xirdf2hkk" path="res://textures/spotlight/Spotlight_basecolor.png" id="2_g60t2"]
[ext_resource type="Script" uid="uid://r4cwqwrvpbwo" path="res://scripts/spotlight.gd" id="2_jvbm6"]
[ext_resource type="Texture2D" uid="uid://b2mh06sdatng3" path="res://textures/spotlight/Spotlight_emission.png" id="3_jvbm6"]
[ext_resource type="Texture2D" uid="uid://b2sol8geuud6i" path="res://textures/spotlight/Spotlight_normal.png" id="4_s3k1p"]
[ext_resource type="Texture2D" uid="uid://iqdteksxc548" path="res://textures/spotlight/Spotlight_roughness.png" id="5_xj8d0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k6vwn"]
albedo_texture = ExtResource("2_g60t2")
roughness_texture = ExtResource("5_xj8d0")
emission_enabled = true
emission_texture = ExtResource("3_jvbm6")
normal_enabled = true
normal_texture = ExtResource("4_s3k1p")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g60t2"]
albedo_texture = ExtResource("2_g60t2")
roughness_texture = ExtResource("5_xj8d0")
emission_enabled = true
emission_texture = ExtResource("3_jvbm6")
normal_enabled = true
normal_texture = ExtResource("4_s3k1p")

[sub_resource type="Animation" id="Animation_s3k1p"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpotlightHolder:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpotlightHolder:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpotlightHolder:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpotlightHolder/Spotlight:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpotlightHolder/Spotlight:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpotlightHolder/Spotlight:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_g60t2"]
resource_name = "rotate_static"
length = 6.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpotlightHolder:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpotlightHolder:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.233333, 0.482914, 0, -1.06667, 1.51874, 0.266667, -0.544669, 0, -1.16667, -1.42116, 0.25, 0),
"times": PackedFloat32Array(0, 3, 6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpotlightHolder:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpotlightHolder/Spotlight:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.5708, -0.25, 0, 0.7, 0.751812, 1.5708, -0.8, 0.697031, 0.366667, -0.63597, 1.5708, -0.466667, -0.581189, 0.25, 0),
"times": PackedFloat32Array(0, 3, 6)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpotlightHolder/Spotlight:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3, 6)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpotlightHolder/Spotlight:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3, 6)
}

[sub_resource type="Animation" id="Animation_jvbm6"]
resource_name = "rotate_flash"
length = 6.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpotlightHolder:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpotlightHolder:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.233333, 0.482914, 0, -1.06667, 1.51874, 0.266667, -0.544669, 0, -1.16667, -1.42116, 0.25, 0),
"times": PackedFloat32Array(0, 3, 6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpotlightHolder:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpotlightHolder/Spotlight:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1.5708, -0.25, 0, 0.7, 0.751812, 1.5708, -0.8, 0.697031, 0.366667, -0.63597, 1.5708, -0.466667, -0.581189, 0.25, 0),
"times": PackedFloat32Array(0, 3, 6)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpotlightHolder/Spotlight:rotation:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3, 6)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpotlightHolder/Spotlight:rotation:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5, 3, 6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xj8d0"]
_data = {
&"RESET": SubResource("Animation_s3k1p"),
&"rotate_flash": SubResource("Animation_jvbm6"),
&"rotate_static": SubResource("Animation_g60t2")
}

[node name="Spotlight" instance=ExtResource("1_qvrmg")]
script = ExtResource("2_jvbm6")

[node name="SpotlightHolder" parent="." index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_k6vwn")

[node name="Spotlight" parent="SpotlightHolder" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_g60t2")

[node name="SpotLight3D" type="SpotLight3D" parent="SpotlightHolder/Spotlight" index="0"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0.164219)
light_energy = 6.889
light_indirect_energy = 10.111
spot_range = 6.567
spot_attenuation = -1.78
spot_angle = 16.26

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
&"": SubResource("AnimationLibrary_xj8d0")
}

[node name="flash_timer" type="Timer" parent="." index="2"]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
